Date	Added
01/07
        * Upon changing to high novice 100 stat points should be given, not 88 [celest]
        * Give high novices First Aid and Trick Dead upon job changing [celest]
        * Remove some unnecessary checks in battle.c [celest]
        * Added some checks to prevent novices still allowed to attack when using
          Trick Dead [celest]
        * Added 'summon' script command. Syntax:

          	summon <monster name>,<monster id>[,<event>];

          Example: 'summon "Poring", 1002, "OnPoringKilled"; 'will summon (note:
                   not *spawn*) 1 poring that'll help its master for 1 minute,
                   and activate the "OnPoringKilled" event when killed.
                   'summon "--ja--",-1;' will summon a random monster.

        * Added Wallex's fix for the wedding script functions [celest]
        * Added the below-mentioned alive packet to SQL's char and login [celest]
        * Enabled login server 'anti-freeze' by default as a temporary solution
          to char-login disconnection [celest]
        * The TXT char server was rejecting login's "i'm alive" packet and disconnecting
          it... fixed [celest]
        * Stall_time wasn't being read in login_athena at all (not by the login server,
          because the code didn't read it, nor by TXT map server, since its in the SQL
          inter_athena.conf reading)... so moved it to inter_athena.conf, and
          change sql_config_read in map.c to inter_config_read [celest]
        * Some tidying up of battle_get_def and _def2 [celest]
        * Added 'bDelayrate' and changed Phen card, Marduk Card and Berzebub Card's
          effects to use this instead of bCastrate (which was reducing casting time,
          not delay time) [celest]
        * Some tidying up of skill_castfix and skill_delayfix [celest]
        * Added Filougarou's fix for Bowling Bash causing it to only display damage, 
          but doesn't do any - thanks! [celest]